--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@types/node": "12.12.5",
     "@types/react": "16.9.11",
     "@types/react-dom": "16.9.3",
+    "@types/react-router-dom": "^5.1.2",
     "antd": "^3.25.0",
     "babel-plugin-import": "^1.12.2",
     "customize-cra": "^0.8.0",
@@ -17,6 +18,7 @@
     "react": "^16.11.0",
     "react-app-rewired": "^2.1.4",
     "react-dom": "^16.11.0",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
     "typescript": "3.6.4"
   },
