--- a/package.json
+++ b/package.json
@@ -3,8 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@date-io/date-fns": "^1.3.11",
     "@material-ui/core": "^4.5.2",
     "@material-ui/icons": "^4.5.1",
+    "@material-ui/pickers": "^3.2.7",
     "@types/jest": "24.0.21",
     "@types/node": "12.12.5",
     "@types/react": "16.9.11",
@@ -13,6 +15,7 @@
     "antd": "^3.25.0",
     "babel-plugin-import": "^1.12.2",
     "customize-cra": "^0.8.0",
+    "date-fns": "^2.0.0-beta.5",
     "less": "^3.10.3",
     "less-loader": "^5.0.0",
     "react": "^16.11.0",
