--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "date-fns": "^2.0.0-beta.5",
     "less": "^3.10.3",
     "less-loader": "^5.0.0",
+    "material-ui-dropzone": "^2.4.5",
+    "moment": "^2.24.0",
     "react": "^16.11.0",
     "react-app-rewired": "^2.1.4",
     "react-dom": "^16.11.0",
