--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "babel-plugin-import": "^1.12.2",
     "customize-cra": "^0.8.0",
     "date-fns": "^2.0.0-beta.5",
+    "firebase": "^7.4.0",
     "less": "^3.10.3",
     "less-loader": "^5.0.0",
     "material-ui-dropzone": "^2.4.5",
@@ -23,6 +24,7 @@
     "react": "^16.11.0",
     "react-app-rewired": "^2.1.4",
     "react-dom": "^16.11.0",
+    "react-firebase-file-uploader": "^2.4.3",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
     "typescript": "3.6.4"
